Atualizacoes na pagina inicial

--- a/css/index.css
+++ b/css/index.css
@@ -35,8 +35,14 @@ body{
     --cor-promocional-tres: #FF4E00;
     --cor-promocional-quatro: #FF3C00;
     --linear-gradient-fundo: linear-gradient(90deg, rgba(240,240,240,1) 24%, rgba(205,205,205,1) 85%);
+    --linear-gradient-fundo-azul: linear-gradient(90deg, rgba(36,152,219,1) 24%, rgba(36,116,219,1) 64%);;
     --fonte-titulos: good_times;
     --fonte-paragrafos: 'Montserrat', sans-serif;
+}
+
+.fa-plus{
+    color: var(--cor-principal);
+    cursor: pointer;
 }
 
 .rwb-tooltip{
@@ -421,7 +427,7 @@ div.cookies-desocultar{
 /* Container Motivos - Início */
 
 .container-motivos{
-    background: var(--linear-gradient-fundo);
+    background: var(--linear-gradient-fundo-azul);
     background-size: cover;
 }
 
@@ -442,10 +448,16 @@ div.cookies-desocultar{
 
 .container-motivos h2{
     font-size: 2.5rem;
+    text-align: center;
+    color: var(--cor-branco);
+}
+
+.container-motivos p{
+    color: var(--cor-preto);
 }
 
 .container-motivos span{
-    color: var(--cor-principal);
+    color: var(--cor-branco);
 }
 
 .motivos i{
@@ -461,6 +473,13 @@ div.cookies-desocultar{
     gap: 1.5rem;  
     font-size: 1.8rem;
     font-weight: bold;
+    height: 0rem;
+    overflow: hidden;
+    transition: .3s;
+}
+
+div.desocultar-motivos{
+    height: auto;
 }
 
 .motivos-imagens{
@@ -584,7 +603,7 @@ div.cookies-desocultar{
 .video{
     width: 100%;
     margin: 0 auto;
-    background: linear-gradient(90deg, rgba(36,152,219,1) 24%, rgba(36,116,219,1) 64%);;
+    background: var(--linear-gradient-fundo-azul);
     display: flex;
     /* border: 1px solid red; */
     justify-content: center;
@@ -679,11 +698,18 @@ div.cookies-desocultar{
     align-items: flex-start;
     flex-flow: row wrap;
     gap: 3rem;
+    overflow: hidden;
+    height: 0rem;
+}
+
+div.desocultar-topicos{
+    height: auto;
 }
 
 .topicos h2{
     margin-bottom: 1rem;
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .topicos>div{
@@ -706,7 +732,7 @@ div.cookies-desocultar{
 /* Container Diferenciais e Benefícios - Início */
 
 .container-diferenciais-e-beneficios{
-    background: var(--linear-gradient-fundo);
+    background: var(--linear-gradient-fundo-azul);
     background-size: cover;
     color: var(--cor-secundaria);
 }
@@ -726,15 +752,17 @@ div.cookies-desocultar{
 }
 
 .container-diferenciais-e-beneficios h2{
-    color: var(--cor-secundaria);
+    color: var(--cor-branco);
     font-size: 3rem;
     font-family: var(--fonte-titulos);
     font-weight: none;
+    text-align: center;
 }
 
 .container-diferenciais-e-beneficios h3{
     font-size: 2.5rem;
     font-family: var(--fonte-titulos);
+    color: var(--cor-branco);
 }
 
 .diferenciais-beneficios{
@@ -743,10 +771,16 @@ div.cookies-desocultar{
     justify-content: center;
     /* border: 1px solid red; */
     gap: 5rem;
+    overflow: hidden;
+    height: 0rem;
+}
+
+div.desocultar-diferenciais{
+    height: auto;
 }
 
 .diferenciais-beneficios p{
-    color: var(--cor-principal);
+    color: var(--cor-branco);
     font-weight: bold;
     font-size: 1.8rem;
 }
@@ -883,7 +917,7 @@ div.cookies-desocultar{
 /* Container Baixar App - Início */
 
 .container-baixar-app{
-    background: var(--linear-gradient-fundo);
+    background: var(--linear-gradient-fundo-azul);
     background-size: cover;
     color: var(--cor-secundaria);
 }
@@ -907,7 +941,7 @@ div.cookies-desocultar{
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    background: linear-gradient(90deg, rgba(36,152,219,1) 24%, rgba(36,116,219,1) 64%);;
+    background: var(--linear-gradient-fundo);
     padding: 3rem 6rem;
     border-radius: 10rem;
     gap: 2rem;
@@ -929,10 +963,12 @@ div.cookies-desocultar{
 .baixar-app h2{
     font-size: 4rem;
     text-align: left;
+    color: var(--cor-principal);
 }
 
 .baixar-app p{
     font-size: 2rem;
+    color: var(--cor-principal);
 }
 
 .baixar-app img{
@@ -964,7 +1000,7 @@ div.cookies-desocultar{
 .container-duvidas>div{
     width: 90%;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 3rem 0;
     min-height: 92vh;
     display: flex;
     /* border: 1px solid red; */
@@ -1008,6 +1044,20 @@ div.cookies-desocultar{
     justify-content: center;
     align-items: flex-start;
     gap: 0.5rem;
+}
+
+.duvida>div{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.5rem;
+    overflow: hidden;
+    height: 0rem;
+}
+
+div.desocultar-duvida{
+    height: auto;
 }
 
 .duvida h3{
@@ -1097,7 +1147,7 @@ div.cookies-desocultar{
 /* Container Cadastro - Início */
 
 .container-cadastro{
-    background: url('../images/carro.jpg') center;
+    background: url('../images/carro3.jpg') center;
     background-size: cover;
     width: 100%;
 }
@@ -1199,22 +1249,25 @@ div.cookies-desocultar{
 
 .container-rodape{
     width: 100%;
-    padding: 0 0 1rem 0;
+    background: url('../images/carro2.jpg') center;
+    background-size: cover;
 }
 
 .container-rodape>div{
     width: 100%;
+    padding: 0 0 1rem 0;
     margin: 0 auto;
     display: flex;
     min-height: 92vh;
     justify-content: flex-end;
     align-items: center;
     flex-flow: column nowrap;
-    /* border: 1px solid blueviolet; */
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .rodape{
-    background: var(--cor-terciaria);
+    /* background: var(--cor-terciaria); */
+    /* background: rgba(247, 247, 247, 0.6); */
     display: flex;
     flex-flow: column nowrap;
     gap: 1.5rem;
@@ -1233,8 +1286,9 @@ div.cookies-desocultar{
 
 .rodape>div>p{
     max-width: 50rem;
-    color: var(--cor-preto);
-    font-weight: bold;
+    color: var(--cor-branco);
+    letter-spacing: 0.1rem;
+    /* font-weight: bold; */
 }
 
 .rodape ul{
@@ -1244,7 +1298,7 @@ div.cookies-desocultar{
 }
 
 .rodape ul a{
-    color: var(--cor-preto);
+    color: var(--cor-branco);
     transition: .3s;
 }
 
@@ -1322,6 +1376,7 @@ div.cookies-desocultar{
     flex-flow: row wrap;
     font-weight: bold;
     font-family: var(--fonte-paragrafos);
+    color: var(--cor-branco);
     gap: 2rem;
 }
 
@@ -1330,7 +1385,7 @@ div.cookies-desocultar{
 }
 
 .rodape-copyright a{
-    color: var(--cor-preto);
+    color: var(--cor-branco);
     transition: .3s;
     display: inline-block;
 }
