--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ body{
     --cor-promocional-tres: #FF4E00;
     --cor-promocional-quatro: #FF3C00;
     --linear-gradient-fundo: linear-gradient(90deg, rgba(240,240,240,1) 24%, rgba(205,205,205,1) 85%);
-    --linear-gradient-fundo-azul: linear-gradient(90deg, rgba(36,152,219,1) 24%, rgba(36,116,219,1) 64%);;
+    --linear-gradient-fundo-azul: linear-gradient(90deg, rgba(36,152,219,1) 24%, rgba(36,116,219,1) 64%);
     --fonte-titulos: good_times;
     --fonte-paragrafos: 'Montserrat', sans-serif;
 }
@@ -98,7 +98,8 @@ body{
     position: fixed;
     top: 10.8rem;
     right: 0;
-    lefT: 0;
+    left: 0;
+    font-size: 1.7rem;
     z-index: 1000;
     display: flex;
     justify-content: center;
@@ -163,6 +164,18 @@ div.cookies-desocultar{
 
 .cookies span:hover, .cookies p a:hover{
     transform: scale(1.05);
+}
+
+.motivos-imagens{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 2rem;
+}
+
+.motivos-imagens img{
+    max-width: 20rem;
 }
 
 /* Cabecalho - Início */
@@ -281,7 +294,7 @@ div.cookies-desocultar{
 
 .cabecalho>div nav{
     display: flex;
-    gap: 2rem;
+    gap: 3rem;
     justify-content: center;
     align-items: center;
 }
@@ -301,7 +314,7 @@ div.cookies-desocultar{
     align-items: center;
     transition: .3s;
     font-size: 2rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     z-index: 100000000;
 }
 
@@ -352,7 +365,7 @@ div.cookies-desocultar{
 .cabecalho>div nav a, .cabecalho-oculto nav a{
     color: var(--cor-secundaria);
     font-size: 2rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     display: flex;
     flex-flow: column nowrap;
     transition: .3s;
@@ -418,14 +431,14 @@ div.cookies-desocultar{
 .home h1{
     color: #767171;
     width: 100%;
-    font-size: 5rem;
+    font-size: 5.5rem;
     text-align: left;
 }
 
 .home p{
     text-align: left;
     color: #767171;
-    font-size: 2.1rem;
+    font-size: 2.5rem;
 }
 
 .home strong{
@@ -433,7 +446,7 @@ div.cookies-desocultar{
     color: var(--cor-principal);
     font-family: var(--fonte-titulos);
     text-align: left;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 /* Container Home - Fim */
@@ -441,128 +454,128 @@ div.cookies-desocultar{
 /* Container Motivos - Início */
 
 .container-motivos{
-    background: var(--linear-gradient-fundo-azul);
+    width: 100%;
+    background: url('../images/carro4.jpg') center;
     background-size: cover;
+    color: var(--cor-secundaria);
 }
 
 .container-motivos>div{
+    background: rgba(36, 152, 219, 0.6) top;
+}
+
+.container-motivos>div>div{
     width: 90%;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 3rem 0;
     min-height: 92vh;
     display: flex;
     /* border: 1px solid red; */
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    gap: 2rem;
+    gap: 4rem;
     font-family: var(--fonte-paragrafos);
-    color: var(--cor-secundaria);
 }
 
 .container-motivos h2{
-    font-size: 2.5rem;
-    text-align: center;
+    font-size: 3rem;
     color: var(--cor-branco);
 }
 
-.container-motivos p{
-    color: var(--cor-preto);
+.container-motivos span{
+    color: var(--cor-branco);
 }
 
-.motivos i.fa-check{
-    color: rgb(28, 189, 28);
-}
-
-.motivos i.fa-plus{
-    color: black;
-}
-
-.container-motivos .fa-plus-ocultar{
-    display: none !important;
-}
-
-.box-motivos{
+.grid-motivos{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-flow: row nowrap;
-    gap: 1rem;  
-    font-size: 1.8rem;
-    font-weight: bold;
     /* border: 1px solid red; */
-}
-
-.box-motivos img{
-    max-width: 50rem;
-    border: 0.6rem solid var(--cor-branco);
-    /* clip-path: polygon(23% 26%, 100% 0, 100% 100%, 23% 71%); */
+    gap: 4rem;
 }
 
 .motivos{
+    /* border: 0.2rem solid green; */
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    width: 80%;
+    margin: 0 auto;
     flex-flow: column nowrap;
-    gap: 2rem;  
-    /* border: 1px solid yellowgreen; */
-}
-
-.container-motivos span{
-    color: var(--cor-branco);
-    /* display: none; */
-}
-
-.container-motivos h2 span{
-    color: var(--cor-preto);
-}
-
-span.desocultar-motivos{
-    display: inline !important;
-}
-
-.motivos>div{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    grid-gap: 1rem;
-}
-
-.motivo{
-    /* max-width: 30rem; */
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1rem;
-    /* border: 1px solid yellow; */
-}
-
-.motivo-titulo{
-    display: flex;
-    gap: 1rem;
     justify-content: center;
     align-items: center;
+    gap: 3rem;
+    /* border: 1px solid red; */
 }
 
-.motivo-titulo span{
-    font-size: 6rem;
+/* .duvidas>div{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;
+} */
+
+.motivo{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    /* border: 1px solid red; */
+    background: #e7e6e6;
+    border-radius: 2rem;
+}
+
+.motivo>div{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    /* gap: 1rem; */
+    /* padding: 2rem; */
+    overflow: hidden;
+    height: 0rem;
+    transition: .3s;
+}
+
+div.desocultar-motivo{
+    height: auto;
 }
 
 .motivo h3{
-    color: var(--cor-branco);
+    cursor: pointer;
+    width: 100%;
+    font-size: 2rem;
+    background: var(--cor-branco);
+    font-family: var(--fonte-titulos);
+    color: var(--cor-secundaria);
+    padding: 2rem;
+    position: relative;
+    border-radius: 2rem;
 }
 
-.motivos-imagens{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    gap: 2rem;
+.motivo p{
+    font-weight: bold;
+    font-family: var(--fonte-paragrafos);
+    font-size: 1.5rem;
+    color: var(--cor-principal);
+    padding: 1rem;
 }
 
-.motivos-imagens img{
-    max-width: 20rem;
+.motivo i{
+    color: var(--cor-principal);
+}
+
+.motivo i.virar{
+    transform: rotate(-90deg);
+}
+
+.motivo h3 i{
+    position: absolute;
+    right: 2rem;
+    top: 35%;
 }
 
 /* Container Motivos - Fim */
@@ -684,20 +697,10 @@ span.desocultar-motivos{
     /* border: 1px solid red; */
     justify-content: center;
     align-items: center;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     gap: 2rem;
     padding: 3rem 1rem;
     font-family: var(--fonte-paragrafos);
-}
-
-.video>div{
-    max-width: 50rem;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
-    /* border: 1px solid yellow; */
 }
 
 .container-video h2{
@@ -758,6 +761,7 @@ span.desocultar-motivos{
 .imagens-video{
     width: 100%;
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     gap: 3rem;
@@ -767,6 +771,7 @@ span.desocultar-motivos{
 }
 
 .imagens-video>div{
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1115,6 +1120,14 @@ div.desocultar-diferenciais{
     max-width: 15rem;
 }
 
+.baixar-app a{
+    transition: .3s;
+}
+
+.baixar-app a:hover{
+    transform: scale(1.05);
+}
+
 /* .baixar-app>img{
     top: -9.8rem;
     max-width: 70rem;
@@ -1178,6 +1191,20 @@ div.desocultar-diferenciais{
     gap: 3rem;
 } */
 
+.duvidas>span{
+    padding: 2rem;
+    border: 0.2rem solid var(--cor-principal);
+    color: var(--cor-principal);
+    font-size: 1.7rem;
+    border-radius: 10rem;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.duvidas>span:hover{
+    transform: scale(1.05);
+}
+
 .duvida{
     width: 100%;
     display: flex;
@@ -1186,6 +1213,11 @@ div.desocultar-diferenciais{
     align-items: flex-start;
     /* border: 1px solid red; */
     background: #e7e6e6;
+    border-radius: 2rem;
+}
+
+div.duvida-ocultar{
+    display: none;
 }
 
 .duvida>div{
@@ -1206,6 +1238,7 @@ div.desocultar-duvida{
 
 .duvida h3{
     cursor: pointer;
+    border-radius: 2rem;
     width: 100%;
     font-size: 2rem;
     background: var(--cor-branco);
@@ -1557,13 +1590,13 @@ div.desocultar-duvida{
 
 /* Container Rodapé - Fim */
 
-@media(max-width: 1150px){
+/* @media(max-width: 1150px){
     .video>div{
         max-width: 30rem;
     }
-}
+} */
 
-@media(max-width: 990px){
+@media(max-width: 1035px){
 
     header.container-oculto-desocultar{
         transform: translateX(0rem);
@@ -1610,20 +1643,42 @@ div.desocultar-duvida{
 }
 
 @media(max-width: 760px){
-    .video{
+    /* .video{
         flex-flow: column nowrap;
-    }
+    } */
 
-    .video>div{
+    /* .video>div{
         width: 100%;
         max-width: none;
-    }
+    } */
 
     .video iframe{
         width: 48rem;
         height: 25.2rem;
         margin: 0 auto;
     }    
+}
+
+@media(max-width: 660px){
+    .grid-motivos{
+        align-items: center;
+        flex-flow: column nowrap;
+        gap: 4rem;
+    }
+
+    .motivos{
+        width: 100%;
+    }
+}
+
+@media(max-width: 540px){
+    /* .imagens-video{
+        flex-flow: column nowrap !important;
+    } */
+
+    .imagens-video span{
+        display: none;
+    }
 }
 
 @media(max-width: 860px){
@@ -1651,18 +1706,6 @@ div.desocultar-duvida{
     .box-motivos img{
         width: 100%;
         max-width: none;
-    }
-
-    .motivos>div{
-        display: flex;
-        gap: 1rem;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .motivo{
-        flex-grow: 1;
     }
 
     .container-home>div img{
