--- a/css/index.css
+++ b/css/index.css
@@ -687,6 +687,10 @@ div.cookies-desocultar{
     color: var(--cor-secundaria);
 }
 
+div.video2{
+    background: var(--linear-gradient-fundo);
+}
+
 .container-video>div{
     padding: 2rem 0;
     width: 90%;
@@ -718,9 +722,21 @@ div.cookies-desocultar{
     color: var(--cor-preto);
 }
 
+div.video2 h2{
+    color: var(--cor-principal);
+}
+
+div.video2 h2 span{
+    color: var(--cor-principal);
+}
+
 .container-video p{
     color: var(--cor-branco);
     font-size: 1.6rem;
+}
+
+div.video2 p{
+    color: var(--cor-principal);
 }
 
 .video-topicos{
@@ -791,6 +807,10 @@ div.cookies-desocultar{
     height: 0.3rem;
     background: var(--cor-branco);
     width: 7rem;
+}
+
+div.video2 .imagens-video span{
+    background: var(--cor-principal);
 }
 
 /* Container Motivos - Fim */
